# jira_tracker

./: .gitignore  Cargo.toml  README.md  Rocket.toml  todo.org
.devcontainer/: devcontainer.json
domain/: Cargo.toml
domain/src/: lib.rs
jira_export/: Cargo.toml
jira_tracker/: Cargo.toml
jira_tracker/src/: app_data.rs  config.rs  files.rs  jira_api.rs  main.rs  tempo_api.rs  web.rs
lib/: rofi-tracker
rofi_jira_tracker/: Cargo.toml
rofi_jira_tracker/src/: lib.rs
src/: app_data.rs  config.rs  domain.rs  files.rs  instant_serializer.rs  lib.rs  logging.rs  main.rs  stopwatch.rs  tempo_api.rs  web.rs
src/serde/: duration_serializer.rs  instant_serializer.rs  mod.rs
