[package]
name = "jira_tracker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
figment = { version = "0.10.8", features = ["env"] }
futures = "0.3.27"
humantime-serde = "1.1.1"
indexmap = { version = "1.9.3", features = ["serde"] }
notify = "6.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
shellexpand = "3.1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
