[workspace]
members = ["domain", "jira_export", "jira_tracker", "rofi_jira_tracker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
strip = true
lto = true

[workspace.dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
humantime-serde = "1.1.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
