[package]
name = "domain"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
humantime-serde = "1.1.1"
serde = { version = "1.0.164", features = ["derive"] }
