[package]
name = "jira_tracker"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
axum = { version = "0.6.18", features = ["macros"] }
chrono = { workspace = true }
figment = { version = "0.10.10", features = ["env"] }
futures = { workspace = true }
humantime-serde = { workspace = true }
indexmap = { version = "1.9.3", features = ["serde"] }
notify = "6.0.1"
regex = "1.8.4"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = "3.1.0"
tokio = { workspace = true }
tower-http = { version = "0.4.1", features = ["trace", "normalize-path"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
